drop down design change

--- a/app/index.html
+++ b/app/index.html
@@ -111,7 +111,7 @@
                           <div class="note-display filter-steps">Steps</div><!--div class="note-display filter-title filter-section-title">STEPS:</div-->
                           <button class="clear-button" ng-click="clear()">CLEAR</button><br>
                           <div style="width:29.3%;height:6%;position:fixed;margin-top:10px">
-                              <select class="sortDropdown sort-drop" id="sort" onchange="sortSelected()">
+                              <select style="width:27.3%; float:left;" class="form-control" id="sort" onchange="sortSelected()">
                                   <option value="new" selected>RECENT</option>
                                   <option value="old">OLDEST</option>
                                   <option value="high">RATE:HIGH</option>
