two levels of reply live

--- a/app/index.html
+++ b/app/index.html
@@ -81,7 +81,8 @@
                             date="dateFormat(note)"
                             current-reply="replyTo"
                             has-reply="hasReply(note)"
-                            reply-one="true">
+                            reply-one="true"
+                            level="setLevel">
                       </note>
                       </div>
                       <div class="input-container grid__item three-tenths">
