--- a/app/index.html
+++ b/app/index.html
@@ -108,10 +108,10 @@
                       <div class="grid__item three-tenths filter-container filter" ng-class="{'filter-open-container': menuOpen || replyTo !== null}">
                           <div class="note-display" style="margin-left:3%;">Sort</div>
                           <div class="note-display">Filter</div>
-                          <div class="note-display filter-steps">Steps</div><!--div class="note-display filter-title filter-section-title">STEPS:</div-->
+                          <div class="note-display filter-steps">Steps</div>
                           <button class="clear-button" ng-click="clear()">CLEAR</button><br>
                           <div style="width:29.3%;height:6%;position:fixed;margin-top:10px">
-                              <select style="width:20%; float:left;margin-left:2%;margin-right:5.4%;" class="form-control" id="sort" onchange="sortSelected()">
+                              <select style="width:23%; float:left;margin-left:2%;margin-right:2.4%;" class="form-control" id="sort" onchange="sortSelected()">
                                   <option value="new" selected>RECENT</option>
                                   <option value="old">OLDEST</option>
                                   <option value="high">RATE:HIGH</option>
@@ -187,16 +187,16 @@
                               <div class="plus-action-button" ng-if="selectedStepsList.indexOf(listOfSteps[listOfSteps.length-1])==-1">+</div>
                               <div class="minus-action-button" ng-if="selectedStepsList.indexOf(listOfSteps[listOfSteps.length-1])!=-1">-</div>
                           </button>
-                          <div class="step-list" ng-class="{'selected-menu-button':general}">GENERAL</div>
+                          <div class="step-list" ng-class="{'selected-menu-button':general}" ng-click="stepSelected(listOfSteps[listOfSteps.length-1]);numberList();">GENERAL</div>
                           <div ng-repeat="step in listOfSteps" ng-if="step.step_number <listOfSteps.length-1" ng-style="{'disabledSteps':general}">
                               <a class="menu-action-button preview-button" href="#{{step.id}}" tooltip="Preview"></a>
                               <button class="menu-action-button" id="step {{step.step_number}}" ng-click="stepSelected(step);numberList()" ng-class="{'selected-menu-button':selectedStepsList.indexOf(step)!=-1}">
                                   <div class="plus-action-button" ng-if="selectedStepsList.indexOf(step)==-1">+</div>
                                   <div class="minus-action-button" ng-if="selectedStepsList.indexOf(step)!=-1">-</div>
                                </button>
-                            <div class="step-list" ng-if="step.step_number==0" ng-class="{'disabled-steps':general,'selected-menu-button':selectedStepsList.indexOf(step)!=-1}">INTRO</div>
-                            <div class="step-list" ng-if="step.step_number==listOfSteps.length-2" ng-class="{'disabled-steps':general,'selected-menu-button':selectedStepsList.indexOf(step)!=-1}">END</div>
-                            <div class="step-list" ng-if="step.step_number!=0 && step.step_number <listOfSteps.length-2" ng-class="{'disabled-steps':general,'selected-menu-button':selectedStepsList.indexOf(step)!=-1}">STEP {{step.step_number}}</div>
+                            <div class="step-list" ng-if="step.step_number==0" ng-class="{'disabled-steps':general,'selected-menu-button':selectedStepsList.indexOf(step)!=-1}"  ng-click="stepSelected(step);numberList()">INTRO</div>
+                            <div class="step-list" ng-if="step.step_number==listOfSteps.length-2" ng-class="{'disabled-steps':general,'selected-menu-button':selectedStepsList.indexOf(step)!=-1}"  ng-click="stepSelected(step);numberList()">END</div>
+                            <div class="step-list" ng-if="step.step_number!=0 && step.step_number <listOfSteps.length-2" ng-class="{'disabled-steps':general,'selected-menu-button':selectedStepsList.indexOf(step)!=-1}"  ng-click="stepSelected(step);numberList()">STEP {{step.step_number}}</div>
                           </div>
                     </div>
                 </div>
@@ -204,16 +204,23 @@
                 <div ng-if="secondMenu">
                    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-                   <div class="window-title categories-title" ng-if="secondMenu">CATEGORIES</div>
+                   <div class="window-title categories-title">Note Categories</div>
+                    <div class="window-title categories-title">Commenting on</div>
+
+
                    <div ng-repeat="step in currentStep">
                       <a class="return-button-second return-button" href="#{{step.id}}">VIEW ORIGINAL STEP</a>
                       <a class="close-button close-button-second" ng-click="closeInput()" href="#{{step.id}}">X</a>
                    </div>
-                     <button ng-click="categorySelected('corrections')" class="icon icon-corrections" ng-class="{'selected selected-corrections': inputCategory == 'corrections'}" tooltip="Corrections"></button>
-                     <button ng-click="categorySelected('details')" class="icon icon-details" ng-class="{'selected selected-details': inputCategory == 'details'}" tooltip="Tell me more!"></button>
-                     <button ng-click="categorySelected('questions')" class="icon icon-questions" ng-class="{'selected selected-questions': inputCategory == 'questions'}" tooltip="Questions"></button>
-                     <button ng-click="categorySelected('other')" class="icon icon-other" ng-class="{'selected selected-other': inputCategory == 'other'}" tooltip="Other notes"></button>
-                     <button class="menu-two menu-button" ng-click="menuSwitch()" tooltip="Back"></button>
+                    <button class="menu-two menu-button" style="margin-left:1% "ng-click="menuSwitch()" tooltip="Back"></button>
+                     <button style="float:left; margin-right:1%;" ng-click="categorySelected('corrections')" class="icon icon-corrections" ng-class="{'selected selected-corrections': inputCategory == 'corrections'}" tooltip="Corrections"></button>
+                     <button style="float:left; margin-right:1%;" ng-click="categorySelected('details')" class="icon icon-details" ng-class="{'selected selected-details': inputCategory == 'details'}" tooltip="Tell me more!"></button>
+                     <button style="float:left; margin-right:1%;" ng-click="categorySelected('questions')" class="icon icon-questions" ng-class="{'selected selected-questions': inputCategory == 'questions'}" tooltip="Questions"></button>
+                     <button style="float:left ;margin-right:5.5%" ng-click="categorySelected('other')" class="icon icon-other" ng-class="{'selected selected-other': inputCategory == 'other'}" tooltip="Other notes"></button>
+                     <div>
+                        <div ng-if="selectedStepsList.length !=0">{{list.toString()}}</div>
+                        <div ng-if="selectedStepsList.length == 0">None Selected</div>
+                     </div>
                      <div ng-if="inputCategory==''">PLEASE SELECT A CATEGORY</div>
                 </div>
               </div>
@@ -233,8 +240,7 @@
                       <div class="close-button reply-close" ng-click="closeInput()">X</div>
                       <br>
                 </div>
-                <textarea class="input-text"  ng-if="(inputCategory == 'other')" ng-model="$parent.newNote" rows="4" placeholder="Please enter your note here."></textarea>
-                <textarea class="input-text"  ng-if="(inputCategory !== 'other')" ng-model="$parent.newNote" rows="6" placeholder="Please enter your note here."></textarea>
+                <textarea class="input-text" ng-model="$parent.newNote" rows="5" placeholder="Please enter your note here."></textarea>
                 <button ng-click="submitNote()" class="plain-button submit-button">SUBMIT</button>
               </div>
           </div>
