--- a/app/index.html
+++ b/app/index.html
@@ -166,7 +166,7 @@
                   console.log(chosenSort);
               }
           </script>
-          <div class="input-container" ng-if="inputPos != null" ng-style="{'top':4.2 + '%', 'right':1.1 + '%'}" style="height:300px;width:29.95%;padding: 5px;">
+          <div class="input-container" ng-if="inputPos != null" ng-style="{'top':2.2 + '%', 'right':1.1 + '%'}" style="height:32%;width:29.95%;padding: 5px;">
               <div class ="window-title" ng-if="replyTo != null">Replying to {{$parent.replyToContributor}}.</div>
               <div ng-if="replyTo==null">
                 <div ng-if="!secondMenu">
