--- a/app/index.html
+++ b/app/index.html
@@ -70,7 +70,7 @@
 
               <div class="grid__item one-tenth input-start-container">
                   <!-- Button for adding a note -->
-                  <button class="input-start icon" ng-click="resetCurrent();lineClicked($index, $event,step);stepSelected(step);numberList()" ng-show="hover || currentStep[0] == step" tooltip="Add a note"></button>
+                  <button class="input-start icon" ng-click="resetCurrent();lineClicked($index, $event,step);stepSelected(step);numberList()" ng-show="(hover && currentStep.length == 0)|| currentStep[0] == step" tooltip="Add a note"></button>
               </div>
 
               <button class="icon icon-corrections icon-bar"
