--- a/app/index.html
+++ b/app/index.html
@@ -118,7 +118,7 @@
                       <div class="window-title" >Select the steps you want to comment on</div>
                       <div ng-repeat="step in currentStep">
                           <a class="close-button" ng-click="closeInput()" href="#{{step.id}}">X</a>
-                          <a class="return-button-first return-button" ng-click="return(step)" href="#{{step.id}}">VIEW ORIGINAL STEP</a>
+                          <a class="return-button-first return-button prime-text" ng-click="return(step)" href="#{{step.id}}">VIEW ORIGINAL STEP</a>
                       </div>
                       <div class="selected-steps" ng-if="selectedStepsList.length == 0">None Selected</div>
                       <div style="margin-bottom:2%">
@@ -130,12 +130,12 @@
                           <div ng-repeat="step in listOfSteps" ng-if="step.step_number <listOfSteps.length-1">
                               <a class="menu-action-button preview-button" ng-click="preview(step);" href="#{{step.id}}" tooltip="Preview"></a>
                               <button class="menu-action-button" id="step {{step.step_number}}" ng-click="stepSelected(step);numberList()" ng-class="{'selected-menu-button':selectedStepsList.indexOf(step)!=-1}">
-                                  <div class="plus-action-button" ng-if="selectedStepsList.indexOf(step)==-1">+</div>
+                                  <div class="plus-action-button prime-text" ng-if="selectedStepsList.indexOf(step)==-1">+</div>
                                   <div class="minus-action-button" ng-if="selectedStepsList.indexOf(step)!=-1">-</div>
                               </button>
-                              <div class="step-list" ng-if="step.step_number==0" ng-class="{'selected-menu-button':selectedStepsList.indexOf(step)!=-1}">INTRO</div>
-                              <div class="step-list" ng-if="step.step_number==listOfSteps.length-2" ng-class="{'selected-menu-button':selectedStepsList.indexOf(step)!=-1}">END</div>
-                              <div class="step-list" ng-if="step.step_number!=0 && step.step_number <listOfSteps.length-2" ng-class="{'selected-menu-button':selectedStepsList.indexOf(step)!=-1}">STEP {{step.step_number}}</div>
+                              <div class="step-list prime-text" ng-if="step.step_number==0" ng-class="{'selected-menu-button':selectedStepsList.indexOf(step)!=-1}" ng-click="stepSelected(step);numberList()">INTRO</div>
+                              <div class="step-list prime-text" ng-if="step.step_number==listOfSteps.length-2" ng-class="{'selected-menu-button':selectedStepsList.indexOf(step)!=-1}" ng-click="stepSelected(step);numberList()">END</div>
+                              <div class="step-list prime-text" ng-if="step.step_number!=0 && step.step_number <listOfSteps.length-2" ng-class="{'selected-menu-button':selectedStepsList.indexOf(step)!=-1}" ng-click="stepSelected(step);numberList()">STEP {{step.step_number}}</div>
                           </div>
                       </div>
                   </div>
@@ -181,7 +181,7 @@
                       <br>
                   </div>
                   <textarea class="input-text"ng-model="$parent.newNote" rows="5" placeholder="Please enter your note here."></textarea>
-                  <button ng-click="submitNote()" class="plain-button submit-button">SUBMIT</button>
+                  <button ng-click="submitNote()" class="plain-button prime-background submit-button">SUBMIT</button>
           </div>
       </div>
     </div>
