--- a/app/index.html
+++ b/app/index.html
@@ -48,11 +48,7 @@
                ng-if="step.step_number!== listOfSteps.length"
                ng-class="{'selected-step':selectedStepsList.indexOf(step)!=-1}">
 
-              <div class="grid__item one-tenth input-start-container is-center-aligned">
-              <!-- Button for adding a note
-              <button class="input-start icon" ng-if="inputPos === null" ng-click="resetCurrent();lineClicked($index, $event,step);stepSelected(step);numberList()" ng-show="hover && selectedLine != $index" tooltip="Add a note"></button>-->
-              </div><!--
-              --><div class="grid__item six-eighths">
+              <div class="grid__item six-eighths">
               <div id="{{step.id}}">
                   <div class="step-title" ng-if="!(step.step_number==0) && (step.step_number<(tutorial.steps.length-2))">Step {{step.step_number}}</div>
               </div>
@@ -68,10 +64,8 @@
             <!-- Buttons to toggle on/off notes
               --><div class="grid__item one-twelfth" id="notes">
 
-              <div class="grid__item one-tenth input-start-container">
-                  <!-- Button for adding a note -->
-                  <button class="input-start icon" ng-click="resetCurrent();lineClicked($index, $event,step);stepSelected(step);numberList()" ng-show="(hover && currentStep.length == 0)|| currentStep[0] == step" tooltip="Add a note"></button>
-              </div>
+              <button class="side-bar icon input-start" ng-click="resetCurrent();lineClicked($index, $event,step);stepSelected(step);numberList()" ng-show="(hover && currentStep.length == 0)|| currentStep[0] == step" tooltip="Add a note"></button>
+              <button class="side-bar icon input-gone" ng-show="!((hover && currentStep.length == 0)|| currentStep[0] == step)" tooltip="Add a note"></button>
 
               <button class="icon icon-corrections side-bar"
                       ng-if="checkForCategory(step, 'corrections')"
@@ -118,7 +112,7 @@
                       <div class="window-title" >Select the steps you want to comment on</div>
                       <div ng-repeat="step in currentStep">
                           <a class="close-button" ng-click="closeInput()" href="#{{step.id}}">X</a>
-                          <a class="return-button-first return-button prime-text" ng-click="return(step)" href="#{{step.id}}">VIEW ORIGINAL STEP</a>
+                          <a class=" prime-text" ng-click="return(step)" href="#{{step.id}}"></a><!--return-button-first return-button-->
                       </div>
                       <div class="selected-steps" ng-if="selectedStepsList.length == 0">None Selected</div>
                       <div style="margin-bottom:2%">
@@ -148,7 +142,7 @@
 
                       <div ng-repeat="step in currentStep">
                           <a class="close-button close-button-second" ng-click="closeInput()" href="#{{step.id}}">X</a>
-                          <a class="return-button-second return-button" ng-click="return(step);" href="#{{step.id}}">VIEW ORIGINAL STEP</a>
+                          <a class="return-button-second return-button" ng-click="return(step);" href="#{{step.id}}"></a>
 
                       </div>
                       <button class="menu-two menu-button" style="margin-left:1%" ng-click="menuSwitch()" tooltip="Back"></button>
