--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
     <!-- build:[src] css/ -->
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.css">
     <link rel="stylesheet" href="/angular-ui-select/dist/select.css">
-    <link href="http://http://fonts.googleapis.com/css?family=Open+Sans'rel='stylesheet'type='text/css'">
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans" >
     <!-- /build -->
       <link rel="stylesheet" href="css/main.css">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
