--- a/app/index.html
+++ b/app/index.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, user-scalable=no" />
     <!-- /build -->
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans"
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans">
     <!-- build:[src] scripts/ -->
-    <script src="modernizr/modernizr.js"></script>
 
 
   </head>
@@ -114,6 +113,7 @@
     <script src="/angular-sanitize/angular-sanitize.js"></script>
     <script src="/moment/moment.js"></script>
     <script src="/angular-moment/angular-moment.js"></script>
+    <script src="modernizr/modernizr.js"></script>
     <!-- /build -->
 
     <!-- build:js scripts/templates.js -->
